--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,3 +1,25 @@
 # English strings go here for Rails i18n
 en:
   :reminder_settings: "Reminder settings"
+  :daily: "Daily"
+  :weekly: "Weekly"
+  :monthly: "Monthly"
+  :every_day: "Every day"
+  :every_second_day: "Every second day"
+  :every_third_day: "Every third day"
+  :every_fourth_day: "Every fourth day"
+  :every_fifth_day: "Every fifth day"
+  :every_sixth_day: "Every sixth day"
+  :every_of_month_format: "Every %s. of month"
+  :every: "Every"
+  :query: "Query"
+  :new_reminder: "New reminder"
+  :interval: "Interval"
+  :sunday: "Sunday"
+  :monday: "Monday"
+  :tuesday: "Tuesday"
+  :wednesday: "Wednesday"
+  :thursday: "Thursday"
+  :friday: "Friday"
+  :saturday: "Saturday"
+  :every_weekly_format: "Every %s"
