--- a/lang/en.yml
+++ b/lang/en.yml
@@ -1,2 +1,31 @@
-# English strings go here
-my_label: "My label"
+# English strings go here for Rails i18n
+en:
+  :issues_reminder: "Issues Reminder"
+  :reminder_settings: "Reminder settings"
+  :new_reminder: "New Reminder"
+  :daily: "Daily"
+  :weekly: "Weekly"
+  :monthly: "Monthly"
+  :every_day: "Every day"
+  :every_second_day: "Every second day"
+  :every_third_day: "Every third day"
+  :every_fourth_day: "Every fourth day"
+  :every_fifth_day: "Every fifth day"
+  :every_sixth_day: "Every sixth day"
+  :every_of_month_format: "Every %s. of month"
+  :every: "Every"
+  :query: "Query"
+  :new_reminder: "New reminder"
+  :interval: "Interval"
+  :sunday: "Sunday"
+  :monday: "Monday"
+  :tuesday: "Tuesday"
+  :wednesday: "Wednesday"
+  :thursday: "Thursday"
+  :friday: "Friday"
+  :saturday: "Saturday"
+  :every_weekly_format: "Every %s"
+  :add: "Add"
+  :save: "Save"
+  :roles: "Roles"
+  :reminder_delete_confirmation: "Do you really want to delete this reminder?"
