Localize permission strings

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,3 +34,4 @@ en:
   :permission_view_issue_reminder: "View issue reminder"
   :reminder_created: "Reminder successfully created"
   :reminder_not_created: "Reminder not created"
+  :mail_subject: "Mail Subject"
