Fixing localization issues

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -12,7 +12,7 @@ de:
   :every_sixth_day: "Jeden sechsten Tag"
   :every_of_month_format: "Jeden %s. des Monats"
   :every: "Jeden"
-  :query: "Query"
+  :query: "Abfrage"
   :new_reminder: "Neue Erinnerung"
   :interval: "Interval"
   :sunday: "Sonntag"
@@ -22,8 +22,13 @@ de:
   :thursday: "Donnerstag"
   :friday: "Freitag"
   :saturday: "Samstag"
-  :every_weekly_format: "Jede %s"
+  :every_weekly_format: "Jeden %s"
   :add: "Hinzufügen"
   :save: "Speichern"
   :roles: "Rollen"
   :reminder_delete_confirmation: "Wollen sie diese Erinnerung wirklich löschen?"
+  :default_email_subject: "Redmine Ticket Erinnerung"
+  :caption: "Ticket Erinnerung"
+  :permission_view_issue_reminder: "Zeige Ticket Erinnerung"
+  :reminder_created: "Erinnerung erfolgreich erstellt"
+  :reminder_not_created: "Erinnerung nicht erstellt"
