--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -27,3 +27,8 @@ en:
   :save: "Save"
   :roles: "Roles"
   :reminder_delete_confirmation: "Do you really want to delete this reminder?"
+  :default_email_subject: "Redmine Issue Reminder"
+  :caption: "Issues Reminder"
+  :permission_view_issue_reminder: "View issue reminder"
+  :reminder_created: "Reminder successfully created"
+  :reminder_not_created: "Reminder not created"
