--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,5 +1,6 @@
 # German strings go here for Rails i18n
 de:
+  :issues_reminder: "Ticket Erinnerung"
   :reminder_settings: "Erinnerungs Einstellungen"
   :daily: "Täglich"
   :weekly: "Wöchentlich"
@@ -28,7 +29,6 @@ de:
   :roles: "Rollen"
   :reminder_delete_confirmation: "Wollen sie diese Erinnerung wirklich löschen?"
   :default_email_subject: "Redmine Ticket Erinnerung"
-  :caption: "Ticket Erinnerung"
   :permission_view_issue_reminder: "Zeige Ticket Erinnerung"
   :reminder_created: "Erinnerung erfolgreich erstellt"
   :reminder_not_created: "Erinnerung nicht erstellt"
