--- a/config/locales/sr-YU.yml
+++ b/config/locales/sr-YU.yml
@@ -34,3 +34,4 @@ en:
   :reminder_created: "Potsetnik uspešno kreiran"
   :reminder_not_created: "Potsetnik nije kreiran"
   :mail_subject: "Naslov poruke"
+  :value: "Vrednost:
