--- a/config/locales/sr.yml
+++ b/config/locales/sr.yml
@@ -33,3 +33,4 @@ en:
   :reminder_created: "Потсетник успешно креиран"
   :reminder_not_created: "Потсетник није креиран"
   :mail_subject: "Наслов поруке"
+  :value: "Вредност"
