Localizations for old versions

--- a/lang/de.yml
+++ b/lang/de.yml
@@ -1,5 +1,6 @@
 # German strings go here for Rails i18n
 de:
+  :issues_reminder: "Ticket Erinnerung"
   :reminder_settings: "Erinnerungs Einstellungen"
   :daily: "Täglich"
   :weekly: "Wöchentlich"
@@ -12,7 +13,7 @@ de:
   :every_sixth_day: "Jeden sechsten Tag"
   :every_of_month_format: "Jeden %s. des Monats"
   :every: "Jeden"
-  :query: "Query"
+  :query: "Abfrage"
   :new_reminder: "Neue Erinnerung"
   :interval: "Interval"
   :sunday: "Sonntag"
@@ -22,8 +23,12 @@ de:
   :thursday: "Donnerstag"
   :friday: "Freitag"
   :saturday: "Samstag"
-  :every_weekly_format: "Jede %s"
+  :every_weekly_format: "Jeden %s"
   :add: "Hinzufügen"
   :save: "Speichern"
   :roles: "Rollen"
   :reminder_delete_confirmation: "Wollen sie diese Erinnerung wirklich löschen?"
+  :default_email_subject: "Redmine Ticket Erinnerung"
+  :permission_view_issue_reminder: "Zeige Ticket Erinnerung"
+  :reminder_created: "Erinnerung erfolgreich erstellt"
+  :reminder_not_created: "Erinnerung nicht erstellt"
