--- a/lang/de.yml
+++ b/lang/de.yml
@@ -32,3 +32,4 @@ de:
   :permission_view_issue_reminder: "Zeige Ticket Erinnerung"
   :reminder_created: "Erinnerung erfolgreich erstellt"
   :reminder_not_created: "Erinnerung nicht erstellt"
+  :value: "Wert"
