Fix unclosed string

--- a/config/locales/sr-YU.yml
+++ b/config/locales/sr-YU.yml
@@ -34,4 +34,4 @@ sr-YU:
   :reminder_created: "Potsetnik uspešno kreiran"
   :reminder_not_created: "Potsetnik nije kreiran"
   :mail_subject: "Naslov poruke"
-  :value: "Vrednost:
+  :value: "Vrednost:"
